# http-server-python

./: .gitignore  MANIFEST.in  README.md  __main__.py  config.py  constants.py  custom_socket.py  handler.py  http_error.py  pyproject.toml  request.py  response.py  route.py  server.py  test_server.py  util.py
example_project/: db.py  handler.py  server.py  sns.py
src/hango/: __main__.py  constants.py  example_entry_point.py  handler.py  http_error.py  request.py  response.py  route.py  server.py  util.py
src/hango/core/: __init__.py  config.py  constants.py  container.py  type_safe.py
src/hango/core/static/: app.js  hello.html  main.css
src/hango/custom_http/: __init__.py  cookie.py  http_client.py  request.py  response.py
src/hango/examples/: handler.py
src/hango/hango_logging/: __init__.py  logger.py
src/hango/http/: __init__.py  http_error.py  request.py  response.py
src/hango/middleware/: __init__.py  cache.py  cors.py  middleware_chain.py  obs_middleware.py  rate_limit_middleware.py  session_middleware.py  type_validation_middleware.py
src/hango/obs/: __init__.py  json_log.py  metrics.py
src/hango/routing/: __init__.py  route.py
src/hango/server/: __init__.py  connection_manager.py  create_app.py  server.py
src/hango/session/: __init__.py  lazy_session.py  session_store.py
src/hango/static/: hello.html
src/hango/utils/: __init__.py  build_ssl_context.py  env_loader.py  error_util.py  extract_params.py  handle_early_hints_response.py  is_coroutine.py  is_cors_allowed.py  path_utils.py  request_id.py  response_time.py  server_file.py  show_date_time.py  time_utils.py  type_safe.py
src/http_server/: __main__.py  constants.py  handler.py  server.py
static/: hello.py
tests/: test_package.py  test_request.py  test_response.py  test_server.py
