[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hango"
dependencies = []
version = "0.1.0"
requires-python = ">=3.8"
authors = [
  { name = "Han C.", email = "hello@hanio.info" }
]
description = "A pure-Python, asyncio-powered HTTP server package"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
"hango" = "hango.__main__:main"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
lint = ["flake8", "mypy"]

[tool.setuptools.package-data]
"hango" = ["static/*"]

[project.urls]
"Homepage" = "https://github.com/H-C-Dev/http-server-python"
"Source"   = "https://github.com/H-C-Dev/http-server-python.git"